5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1712_2508.log
== TEST (2019-05-13 19:14:37) 
-- CODE:
x = int(input(""))

p  = 0
n = 1
while cont < x:
	cont = cont + 1
	p = p + 4/((n + 1)*(n + 2)*(n + 3))
	n = n + 2
pi =3 + (round(p, 8))
print(pi)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while cont < x:
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:14:56) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
while cont < x:
	cont = cont + 1
	p = p + 4/((n + 1)*(n + 2)*(n + 3))
	n = n + 2
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:15:07) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
while cont < x:
	cont = cont + 1
	p = p + 4/((n + 1)*(n + 2)*(n + 3))
	n = n + 2
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:15:13) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
while cont < x:
	cont = cont + 1
	p = p + 4/((n + 1)*(n + 2)*(n + 3))
	n = n + 2
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:16:16) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = 1
while cont < x:
	cont = cont + 1
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	m = m*(-1)
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:16:27) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = 1
while cont < x:
	cont = cont + 1
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	m = m*(-1)
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:16:34) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = 1
while cont < x:
	cont = cont + 1
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	m = m*(-1)
pi =3 + (round(p, 8))
print(pi)
	
-- EXECUTION TIME:
0.182178
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:17:46) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:17:54) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
pi =3 + (round(p, 8))
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:18:04) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
pi =3 + (round(p, 8))
print(pi)
	
-- EXECUTION TIME:
0.197113
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:20:45) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3 + p
print(pi)
	
-- EXECUTION TIME:
0.15887
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:23:32) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- EXECUTION TIME:
0.154166
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:23:38) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:23:46) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:24:05) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:24:11) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:24:15) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:24:39) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:24:54) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:26:34) 
-- CODE:
x = int(input(""))
pi = 0
cont = 1
p = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
	pi = 3
p = (round(p, 8))
pi = pi + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:26:39) 
-- CODE:
x = int(input(""))
pi = 0
cont = 1
p = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
	pi = 3
p = (round(p, 8))
pi = pi + p
print(pi)
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:28:49) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
if x != 0:
	pi = 3.0 + p
	print(pi)
else:
	print(0)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:28:54) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
if x != 0:
	pi = 3.0 + p
	print(pi)
else:
	print(0)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:29:00) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
if x != 0:
	pi = 3.0 + p
	print(pi)
else:
	print(0)
-- EXECUTION TIME:
0.252484
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:30:41) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
if x != 0:
	pi = 3.0 + p
	print(pi)
else:
	print(0)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:32:16) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:32:32) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:32:36) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (4/((n + 1)*(n + 2)*(n + 3)))*(m)
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.184774
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:35:02) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:35:07) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:35:13) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:35:18) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:35:42) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.17244
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:36:02) 
-- CODE:
x = int(input(""))

cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.151983
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:36:13) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.151362
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:21) 
-- CODE:
x = int(input(""))
cont = 12
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:36:29) 
-- CODE:
x = int(input(""))
cont = 12
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:36:33) 
-- CODE:
x = int(input(""))
cont = 12
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.119352
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14140672
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14207182
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:38:51) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:39:00) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.188737
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:56:04) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:56:10) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:56:16) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:56:23) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.148348
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:23:15) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:23:38) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.23642
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:53:53) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:54:03) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.218707
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:54:23) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.163299
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:31) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:36) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:41) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:46) 
-- CODE:
from math import* 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:55:24) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.129353
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:55:27) 
-- CODE:
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:55:49) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.151487
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:55:52) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:56:20) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:57:35) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:57:43) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.121114
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:24:10) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(round(pi, 8))
-- EXECUTION TIME:
0.15913
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
